--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Gamer Zone</title>
 </head>
 <body>
-    hello world
+    <!-- Header Start -->
+    <header>
+        <div class="logo">
+            <img src="./images/logo.png" alt="" class="logo-image">
+        </div>
+        <div class="nav-items">
+            <a href="">About Us</a>
+            <a href="">Developers</a>
+            <div class="follow">
+                <a href="">Follow us on</a>
+                <img src="./images/social icon.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!-- Header END -->
 </body>
 </html>
