--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Gamer Zone</title>
 </head>
+
 <body>
     <!-- Header Start -->
     <header>
@@ -23,5 +28,243 @@
         </div>
     </header>
     <!-- Header END -->
+
+    <!-- Main Start -->
+
+    <!-- Hero Section Start -->
+    <div class="hero-container">
+        <div class="hro-text-container">
+            <h2>Play Like The</h2>
+            <h1 class="goat">G.O.A.T.</h1>
+            <ul>
+                <li>1-Click instant play</li>
+                <li>No Download</li>
+                <li>1000s of supported online games</li>
+            </ul>
+            <div class="hero-btn-container">
+                <button>Sign In</button>
+                <button class="go-btn">Go Rogue</button>
+            </div>
+        </div>
+        <div class="hero-image-container">
+            <img src="./images/Group 18.png" alt="">
+        </div>
+    </div>
+    <!-- Hero Section End -->
+
+    <!-- About Section Start -->
+    <div class="about-container">
+        <div class="intro">
+            <h2>Online Games <span>Funny Videos</span></h2>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="imagebox-container">
+            <div class="image-box">
+                <div class="img-box-img">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <div class="overlay">
+                        <img src="./images/play-button 1.png" alt="" class="play-button">
+                    </div>
+                </div>
+                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="image-box">
+                <div class="img-box-img">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <div class="overlay">
+                        <img src="./images/play-button 1.png" alt="" class="play-button">
+                    </div>
+                </div>
+                <p>Did you score? #unblockedgames #school</p>
+            </div>
+            <div class="image-box">
+                <div class="img-box-img">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <div class="overlay">
+                        <img src="./images/play-button 1.png" alt="" class="play-button">
+                    </div>
+                </div>
+                <p>Breaking game records like OG</p>
+            </div>
+            <div class="image-box">
+                <div class="img-box-img">
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <div class="overlay">
+                        <img src="./images/play-button 1.png" alt="" class="play-button">
+                    </div>
+                </div>
+                <p>Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+        </div>
+    </div>
+    <!-- About Section End -->
+
+    <!-- Little more -->
+    <div class="little-more">
+        <div class="intro little-intro">
+            <h2><span>Play Instantly,</span> No Downloads No Installs.</h2>
+            <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                browser.</p>
+        </div>
+        <div class="little-image-container">
+            <img src="./images/Group 59.png" alt="">
+        </div>
+    </div>
+    <!-- Little more End -->
+
+    <!-- Games -->
+    <div class="games-containe">
+        <div class="games-1">
+            <div class="game">
+                <img src="./images/Rectangle 11.png" alt="">
+                <p>Action Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </div>
+        </div>
+        <div class="games-2">
+            <div class="game">
+                <img src="./images/Rectangle 16.png" alt="">
+                <p>Role Palying Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 17.png" alt="">
+                <p>Music & Audio Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 18.png" alt="">
+                <p>Puzzle Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
+            </div>
+        </div>
+    </div>
+    <!-- Games End -->
+
+    <!-- Games mobile -->
+    <div class="games-containe-mobile">
+        <div class="games-3">
+            <div class="game">
+                <img src="./images/Rectangle 11.png" alt="">
+                <p>Action Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </div>
+        </div>
+        <div class="games-4">
+            <div class="game">
+                <img src="./images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 16.png" alt="">
+                <p>Role Palying Games</p>
+            </div>
+        </div>
+        <div class="games-5">
+            <div class="game">
+                <img src="./images/Rectangle 17.png" alt="">
+                <p>Music & Audio Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 18.png" alt="">
+                <p>Puzzle Games</p>
+            </div>
+            <div class="game">
+                <img src="./images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
+            </div>
+        </div>
+    </div>
+    <!-- Games mobile End -->
+
+    <!-- Main END -->
 </body>
+<!-- Footer -->
+<footer>
+    <div class="ft-logo">
+        <img src="./images/foooter-logo.png" alt="">
+    </div>
+    <div class="ft-menu">
+        <p>Our Story</p>
+        <p>Games</p>
+        <p>Web Games</p>
+        <p>Careers</p>
+        <p>Support</p>
+        <p>My Account</p>
+    </div>
+    <div class="ft-menu-mo-1">
+        <p>Our Story</p>
+        <p>Games</p>
+        <p>Web Games</p>
+    </div>
+    <div class="ft-menu-mo-2">
+        <p>Careers</p>
+        <p>Support</p>
+        <p>My Account</p>
+    </div>
+    <div class="ft-social">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-apple"></i>
+    </div>
+    <div class="ft-social-mo-1">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+    </div>
+    <div class="ft-social-mo-2">
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-apple"></i>
+    </div>
+    <div class="ft-importance-link">
+        <p>Terms and Conditions</p>
+        <p>Privacy Policy</p>
+        <p>Cookie Policy</p>
+        <p>Privacy Settings</p>
+    </div>
+    <div class="ft-importance-link-mo-1">
+        <p>Terms and Conditions</p>
+        <p>Privacy Policy</p>
+    </div>
+    <div class="ft-importance-link-mo-2">
+        <p>Cookie Policy</p>
+        <p>Privacy Settings</p>
+    </div>
+    <div class="copyright">
+        <p>Play Games@Gamer@2000-2023 Gamer Bangladesh</p>
+    </div>
+</footer>
+<!-- Footer End -->
+
 </html>
